Fix: apply correctly the text colors of the chosen scheme

Summary:
BUG: 398758

Since the implementation of KSyntaxHighlighting in KF5.50, KTextEditor always uses the "Normal" scheme for text colors.

Previously, the colors were set according to `KSyntaxHighlighting::Repository::LightTheme`, which corresponds to the "Normal" scheme. ~~Now use KateRendererConfig::global() to get the name of the current selected scheme.~~

Before:
{F6701315}

After:
{F6701318}

Reviewers: #ktexteditor, #kate, cullmann, mwolff

Reviewed By: #ktexteditor, #kate, cullmann

Subscribers: mwolff, cullmann, dhaumann, kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D19876